# SIGE-GE

./: .gitignore  INICIAR.ps1  main.py  pyproject.toml  start.sh
backend/: config.py  db.py  events.py  server.py  sync_engine.py
backend/routes/: common.py  grupos.py  macroregiones.py  sedes.py  sync.py  tta.py
backend/storage/: __init__.py  base.py  local_folder.py  sharepoint.py
config/: settings.example.toml
docs/: schema.sql
frontend/: api.js  app.js  index.html  router.js  state.js  styles.css  toast.js
frontend/components/: modal.js  pagination.js  sidebar.js  table.js
frontend/views/: dashboard.js  grupos.js  macroregiones.js  sedes.js  sync.js  tta.js
tests/: conftest.py  test_grupos.py  test_sedes.py  test_sync.py
tools_scripts/: empaquetar_windows.sh
